[package]
name = "display_palette"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
gtk = { version = "0.6.*", package = "gtk4", features = ["v4_6"] }
image = "0.25.1"
palette_extract = "0.1.0"
